increase countdown size

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                 </div>
 
                 <!-- Countdown -->
-                <div class="col-12 col-md-6 my-5" style="min-height: 250px;">
-                    <div class="d-flex align-items-center justify-content-center position-relative h-100 w-100">
+                <div class="col-12 col-md-6 my-5" style="min-height: 300px;">
+                    <div class="d-flex align-items-center justify-content-center position-relative h-100 w-100" style="min-height: 300px;">
                         <div class="countdown-dots position-absolute"></div>
                         <div class="figure position-absolute">
                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                width="250px" height="250px" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
+                                width="300px" height="300px" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
                                 <path class="path" fill="none" stroke="#ffffff" stroke-width="4" stroke-miterlimit="10" d="M100.416,2.001C154.35,2.225,198,46.015,198,100
                                     c0,54.124-43.876,98-98,98S2,154.124,2,100S45.876,2,100,2"/>
                             </svg>
