--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css" integrity="sha512-CpIKUSyh9QX2+zSdfGP+eWLx23C8Dj9/XmHjZY2uDtfkdLGo0uY12jgcnkX9vXOgYajEKb/jiw67EYm+kBf+6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Custom -->
-    <link rel="stylesheet" href="./styles.css">
-    <script src="./scripts.js"></script>
+    <link rel="stylesheet" href="./styles.css?v=1">
+    <script src="./scripts.js?v=1"></script>
 
   </head>
 
