--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Trispace&display=swap" rel="stylesheet">
     
     <!-- jQuery 2.1.3 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" integrity="sha512-egJ/Y+22P9NQ9aIyVCh0VCOsfydyn8eNmqBy+y2CnJG+fpRIxXMS6jbWP8tVKp0jp+NO5n8WtMUAnNnGoJKi4w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" integrity="sha512-egJ/Y+22P9NQ9aIyVCh0VCOsfydyn8eNmqBy+y2CnJG+fpRIxXMS6jbWP8tVKp0jp+NO5n8WtMUAnNnGoJKi4w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <!-- Velocity.JS 1.1.0 -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js" integrity="sha512-GvV09O/SNrtq1Au2eFYt+Yk3czV9lO/XGr272nKGvVq9cd3jrDdAwM+Z8ETKS/NkaAKug4HVIftP08M6EfMNYQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -25,7 +25,7 @@
 
     <!-- Custom -->
     <link rel="stylesheet" href="./styles.css?v=1">
-    <script src="./scripts.js?v=1"></script>
+    <script defer src="./scripts.js?v=1"></script>
 
   </head>
 
