--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
     <link rel="preload" href="/assets/Pattanakarn-Regular-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
     <!-- Custom -->
-    <link rel="stylesheet" href="./styles.css?v=1">
-    <script defer src="./scripts.js?v=1"></script>
+    <link rel="stylesheet" href="./styles.css?v=2">
+    <script defer src="./scripts.js?v=2"></script>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/fav/favicon-16x16.png">
+    <link rel="manifest" href="/assets/fav/site.webmanifest">
+    <link rel="mask-icon" href="/assets/fav/safari-pinned-tab.svg" color="#2f1244">
+    <link rel="shortcut icon" href="/assets/fav/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="ComSSA X CASSA Hackathon 2022">
+    <meta name="application-name" content="ComSSA X CASSA Hackathon 2022">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="msapplication-config" content="/assets/fav/browserconfig.xml">
+    <meta name="theme-color" content="#2f1244">
 
   </head>
 
@@ -39,27 +52,39 @@
     <main class="flex-shrink-0">
         <div class="container mb-5">
             <!-- Header -->
-            <div class="d-flex align-items-center justify-content-around mt-top main-title w-100">
+            <div class="d-none d-md-flex align-items-center justify-content-around mt-top main-title w-100">
                 <img src="/assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022">
                 <h1 class="int-text mx-4">Interstellar Odyssey</h1>
                 <img src="/assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
             </div>
+            
+            <div class="d-flex d-md-none flex-column align-items-center justify-content-center mt-top main-title w-100">
+                <div class="mb-3">
+                    <img src="/assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022" class="me-4">
+                    <img src="/assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
+                </div>
+                <h1 class="int-text">Interstellar Odyssey</h1>
+            </div>
 
 
-            <div class="row mt-5 flex-column-reverse flex-md-row">
+            <div class="row mt-5 flex-column-reverse flex-lg-row">
 
-                <div class="col-12 col-md-6 my-5">
+                <div class="col-12 col-lg-6 my-5">
                     <!-- Description -->
                     <p>The ComSSA Hackathon is an annual event hosted by the Computer Science Students Association (ComSSA), the largest computing club at Curtin University, to provide students and young professionals of all disciplines an opportunity to learn, collaborate and solve problems. This year, ComSSA is co-collaborating with the Computer And Security Student Association (CASSA), an association for students studying Computer Science and Cyber Security at Edith Cowan University.</p>
-    <p>                        Proudly partnered with the School of Electrical Engineering, Computing and Mathematical Sciences (EECMS), the ComSSA Hackathon, titled Interstellar Odyssey, will be hosted in-person at Bentley campus with a prize pool of $4500.
-    </p>
+                    <p>Proudly partnered with the School of Electrical Engineering, Computing and Mathematical Sciences (EECMS), the ComSSA Hackathon, titled Interstellar Odyssey, will be hosted in-person at Bentley campus with a prize pool of $4500.
+                    </p>
                     <!-- Registration -->
                     <div class="row">
                         <div class="col-12 col-md-6 mb-2">
-                            <button class="btn btn-primary h-100 w-100">Group Registration</button>
+                            <a href="https://forms.gle/PqPnCgURt4Qmi9t59" target="_blank" rel="noopener noreferrer" class="btn btn-primary h-100 w-100">
+                                Group Registration
+                            </a>
                         </div>
                         <div class="col-12 col-md-6 mb-2">
-                            <button class="btn btn-primary h-100 w-100">Individual Registration</button>
+                            <a href="https://forms.gle/PqPnCgURt4Qmi9t59" target="_blank" rel="noopener noreferrer" class="btn btn-primary h-100 w-100">
+                                Individual Registration</button>
+                            </a>
                         </div>
                     </div>
 
@@ -82,8 +107,7 @@
                 </div>
 
                 <!-- Countdown -->
-                <!-- commsaa logo on left? -->
-                <div class="col-12 col-md-6 my-5" style="min-height: 300px;">
+                <div class="col-12 col-lg-6 my-5" style="min-height: 300px;">
                     <div class="d-flex align-items-center justify-content-center position-relative h-100 w-100" style="min-height: 300px;">
                         <div class="countdown-dots position-absolute"></div>
                         <div class="figure position-absolute">
@@ -94,7 +118,7 @@
                             </svg>
                         </div>
                         <!-- Timers -->
-                        <div class="position-absolute row w-100 h-100">
+                        <div class="position-absolute row sf">
                             <div class="col-6 p-0">
                                 <div class="d-flex align-items-end justify-content-end h-100 w-100">
                                     <div class="timer">
@@ -144,32 +168,72 @@
                         <button type="button" data-bs-target="#car-main" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#car-main" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         <button type="button" data-bs-target="#car-main" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#car-main" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#car-main" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                        <button type="button" data-bs-target="#car-main" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                        <button type="button" data-bs-target="#car-main" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                        <button type="button" data-bs-target="#car-main" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                        <button type="button" data-bs-target="#car-main" data-bs-slide-to="9" aria-label="Slide 10"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="5000">
-                            <img src="./assets/prev1.jpg" class="d-block w-100" alt="...">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev1_ejod9a.webp" class="d-block w-100" alt="Medium shot of a team presenting">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">Photos from ComSSA x IET Hackathon - 2021</h5>
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
-                            <img src="./assets/prev2.jpg" class="d-block w-100" alt="...">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev2_hal9jh.webp" class="d-block w-100" alt="Mid shot of a team">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">Photos from ComSSA x IET Hackathon - 2021</h5>
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
-                            <img src="./assets/prev3.jpg" class="d-block w-100" alt="...">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev3_gcagk6.webp" class="d-block w-100" alt="Wide shot of a team presenting">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
-                            <img src="./assets/prev4.jpg" class="d-block w-100" alt="...">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev4_xpwqiv.webp" class="d-block w-100" alt="Wide shot of a team presenting">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Fourth slide label</h5>
-                                <p>Some representative placeholder content for the fourth slide.</p>
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182202/Hackathon/H7409018_S_nsnrvi.png" class="d-block w-100" alt="Wide shot of students listening">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182201/Hackathon/H7409238_S_dofhvn.png" class="d-block w-100" alt="Mid shot of a group of students">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182204/Hackathon/H7409524_S_gyplss.png" class="d-block w-100" alt="Wide shot of many students">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182203/Hackathon/H7409544_S_z2k3sq.png" class="d-block w-100" alt="Mid shot of students and staff">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,y_0,fl_lossy,f_auto/v1666182199/Hackathon/IMG_3824_S_oj2wky.png" class="d-block w-100" alt="Students pointing at laptop">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182201/Hackathon/IMG_4467_S_qkjesy.png" class="d-block w-100" alt="ComSSA team working">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
                             </div>
                         </div>
                     </div>
@@ -185,35 +249,35 @@
             </div>
 
             <!-- Sponsors -->
-            <div class="mt-5 section-title">
+            <div class="section-title">
                 <!-- Collection of images -->
                 <div class="row mt-5 top-img">
-                    <div class="col-12 col-lg-6 d-flex flex-column align-items-center justify-content-start mb-5">
+                    <div class="col-12 col-lg-6 d-flex flex-column align-items-center my-5">
                         <h4 class="mb-4">In collaboration with </h4>
-                        <img src="./assets/cassa.png" class="img-fluid" alt="...">
+                        <img src="./assets/cassa.png" class="img-fluid" alt="CASSA Logo">
                     </div>
-                    <div class="col-12 col-lg-6 d-flex flex-column align-items-center justify-content-start mb-5">
+                    <div class="col-12 col-lg-6 d-flex flex-column align-items-center my-5">
                         <h4 class="mb-4">Proudly partnered with </h4>
-                        <img src="./assets/eecms.png" class="img-fluid" alt="...">
+                        <img src="./assets/eecms.png" class="img-fluid" alt="EECMS Logo">
                     </div>
                 </div>
                 <div class="row mt-5 sponsors">
                     <h4 class="w-100 text-center mb-4">Sponsors</h4>
 
                     <div class="col-6 col-md-4 col-lg-3 mb-5 d-flex align-items-center justify-content-center">
-                        <img src="./assets/powerledger.png" style="filter: brightness(10)" class="img-fluid" alt="...">
+                        <img src="./assets/powerledger.png" style="filter: brightness(10);" class="img-fluid" alt="Powerledger Logo">
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 mb-5 d-flex align-items-center justify-content-center">
-                        <img src="./assets/vgw.png" class="img-fluid" alt="...">
+                        <img src="./assets/vgw.png" style="filter: invert(1);" class="img-fluid" alt="VGW Logo">
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 mb-5 d-flex align-items-center justify-content-center">
-                        <img src="./assets/atlassian.png" class="img-fluid" alt="...">
+                        <img src="./assets/atlassian.png" class="img-fluid" alt="Atlassian Logo">
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 mb-5 d-flex align-items-center justify-content-center">
-                        <img src="./assets/imc.png" class="img-fluid" alt="...">
+                        <img src="./assets/imc.png" class="img-fluid" alt="IMC Logo">
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 mb-5 d-flex align-items-center justify-content-center">
-                        <img src="./assets/bankwest.png" class="img-fluid" alt="...">
+                        <img src="./assets/bankwest.png" class="img-fluid" alt="Bankwest Logo">
                     </div>
                 </div>
             </div>
@@ -222,9 +286,9 @@
 
     </main>
 
-    <footer class="footer mt-auto py-3 bg-dark">
-        <div class="container">
-            <span>Footer if needed</span>
+    <footer class="footer mt-auto py-3">
+        <div class="container d-flex justify-content-center">
+            <span>Made with ❤ by Sean and ComSSA</span>
         </div>
     </footer>
 
