--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/js/bootstrap.min.js" integrity="sha512-5BqtYqlWfJemW5+v+TZUs22uigI8tXeVah5S/1Z6qBLVO7gakAOtkOzUtgq6dsIo5c0NJdmGPs0H9I+2OHUHVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css" integrity="sha512-CpIKUSyh9QX2+zSdfGP+eWLx23C8Dj9/XmHjZY2uDtfkdLGo0uY12jgcnkX9vXOgYajEKb/jiw67EYm+kBf+6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="preload" href="/assets/Pattanakarn-Regular-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+    <link rel="preload" href="./assets/Pattanakarn-Regular-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
     <!-- Custom -->
     <link rel="stylesheet" href="./styles.css?v=2">
     <script defer src="./scripts.js?v=2"></script>
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/fav/favicon-16x16.png">
-    <link rel="manifest" href="/assets/fav/site.webmanifest">
-    <link rel="mask-icon" href="/assets/fav/safari-pinned-tab.svg" color="#2f1244">
-    <link rel="shortcut icon" href="/assets/fav/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/fav/favicon-16x16.png">
+    <link rel="manifest" href="./assets/fav/site.webmanifest">
+    <link rel="mask-icon" href="./assets/fav/safari-pinned-tab.svg" color="#2f1244">
+    <link rel="shortcut icon" href="./assets/fav/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="ComSSA X CASSA Hackathon 2022">
     <meta name="application-name" content="ComSSA X CASSA Hackathon 2022">
     <meta name="msapplication-TileColor" content="#603cba">
-    <meta name="msapplication-config" content="/assets/fav/browserconfig.xml">
+    <meta name="msapplication-config" content="./assets/fav/browserconfig.xml">
     <meta name="theme-color" content="#2f1244">
 
   </head>
@@ -53,15 +53,15 @@
         <div class="container mb-5">
             <!-- Header -->
             <div class="d-none d-md-flex align-items-center justify-content-around mt-top main-title w-100">
-                <img src="/assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022">
+                <img src="./assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022">
                 <h1 class="int-text mx-4">Interstellar Odyssey</h1>
-                <img src="/assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
+                <img src="./assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
             </div>
             
             <div class="d-flex d-md-none flex-column align-items-center justify-content-center mt-top main-title w-100">
                 <div class="mb-3">
-                    <img src="/assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022" class="me-4">
-                    <img src="/assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
+                    <img src="./assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022" class="me-4">
+                    <img src="./assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
                 </div>
                 <h1 class="int-text">Interstellar Odyssey</h1>
             </div>
