--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Made with ❤ by Sean M, ComSSA and CASSA">
+    <meta name="author" content="Made with ❤ by Sean and ComSSA">
     <meta name="description" content="ComSSA X CASSA Hackathon 2022">
     <title>ComSSA X CASSA Hackathon 2022</title>
 
@@ -26,7 +26,7 @@
     <link rel="preload" href="./assets/Pattanakarn-Regular-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
     <!-- Custom -->
-    <link rel="stylesheet" href="./styles.css?v=2">
+    <link rel="stylesheet" href="./styles.css?v=3">
     <script defer src="./scripts.js?v=2"></script>
 
     <!-- Favicons -->
