--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-6 mb-2">
-                            <a href="https://forms.gle/PqPnCgURt4Qmi9t59" target="_blank" rel="noopener noreferrer" class="btn btn-primary h-100 w-100">
+                            <a href="https://forms.gle/TqDqrD3mcQGZ6iDSA" target="_blank" rel="noopener noreferrer" class="btn btn-primary h-100 w-100">
                                 Individual Registration</button>
                             </a>
                         </div>
