--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/js/bootstrap.min.js" integrity="sha512-5BqtYqlWfJemW5+v+TZUs22uigI8tXeVah5S/1Z6qBLVO7gakAOtkOzUtgq6dsIo5c0NJdmGPs0H9I+2OHUHVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css" integrity="sha512-CpIKUSyh9QX2+zSdfGP+eWLx23C8Dj9/XmHjZY2uDtfkdLGo0uY12jgcnkX9vXOgYajEKb/jiw67EYm+kBf+6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Custom Fonts -->
     <link rel="preload" href="./assets/Pattanakarn-Regular-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-    <link rel="preload" href="./assets/Pattanakarn-Bold-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
-    <!-- Custom CSS and JS-->
-    <link rel="stylesheet" href="./styles.css?v=4">
+    <!-- Custom -->
+    <link rel="stylesheet" href="./styles.css?v=5">
     <script defer src="./scripts.js?v=2"></script>
 
     <!-- Favicons -->
@@ -49,31 +47,31 @@
 <body class="d-flex flex-column h-100">
 
     <div class="bg-image"></div>
-    <div class="comssa-image"></div>
     
     <!-- Begin page content -->
     <main class="flex-shrink-0">
         <div class="container mb-5">
             <!-- Header -->
-            <div class="d-none d-md-flex align-items-center mt-top main-title w-100">
-                <img src="./assets/CH22_Branding_Elements_3.svg" alt="ComSSA X CASSA Hackathon 2022">
+            <div class="d-none d-lg-flex align-items-center justify-content-around mt-top main-title w-100">
+                <img src="./assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022">
                 <h1 class="int-text mx-4">Interstellar Odyssey</h1>
+                <img src="./assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
             </div>
             
-            <div class="d-flex d-md-none flex-column align-items-center justify-content-center mt-top main-title w-100">
+            <div class="d-flex d-lg-none flex-column align-items-center justify-content-center mt-top main-title w-100">
                 <div class="mb-3">
-                    <img src="./assets/CH22_Branding_Elements_3.svg" alt="ComSSA X CASSA Hackathon 2022" class="me-4">
+                    <img src="./assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022" class="me-4">
                     <img src="./assets/comssa.png" alt="ComSSA Logo">
                 </div>
                 <h1 class="int-text">Interstellar Odyssey</h1>
             </div>
 
 
-            <div class="row flex-column-reverse flex-lg-row">
-
+            <div class="row mt-5 flex-column-reverse flex-lg-row">
                 <div class="col-12 col-lg-6 my-5">
+                    <img src="./assets/h22.svg" class="mb-4" alt="ComSSA Hackathon 2022">
                     <!-- Description -->
-                    <p class="mt-6">The ComSSA Hackathon is an annual event hosted by the Computer Science Students Association (ComSSA), the largest computing club at Curtin University, to provide students and young professionals of all disciplines an opportunity to learn, collaborate and solve problems. This year, ComSSA is co-collaborating with the Computer And Security Student Association (CASSA), an association for students studying Computer Science and Cyber Security at Edith Cowan University.</p>
+                    <p>The ComSSA Hackathon is an annual event hosted by the Computer Science Students Association (ComSSA), the largest computing club at Curtin University, to provide students and young professionals of all disciplines an opportunity to learn, collaborate and solve problems. This year, ComSSA is co-collaborating with the Computer And Security Student Association (CASSA), an association for students studying Computer Science and Cyber Security at Edith Cowan University.</p>
                     <p>Proudly partnered with the School of Electrical Engineering, Computing and Mathematical Sciences (EECMS), the ComSSA Hackathon, titled Interstellar Odyssey, will be hosted in-person at Bentley campus with a prize pool of $4500.
                     </p>
                     <!-- Registration -->
@@ -179,6 +177,30 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev1_ejod9a.webp" class="d-block w-100" alt="Medium shot of a team presenting">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev2_hal9jh.webp" class="d-block w-100" alt="Mid shot of a team">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev3_gcagk6.webp" class="d-block w-100" alt="Wide shot of a team presenting">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev4_xpwqiv.webp" class="d-block w-100" alt="Wide shot of a team presenting">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
                             <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182202/Hackathon/H7409018_S_nsnrvi.png" class="d-block w-100" alt="Wide shot of students listening">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
@@ -212,30 +234,6 @@
                             <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182201/Hackathon/IMG_4467_S_qkjesy.png" class="d-block w-100" alt="ComSSA team working">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev1_ejod9a.webp" class="d-block w-100" alt="Medium shot of a team presenting">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev2_hal9jh.webp" class="d-block w-100" alt="Mid shot of a team">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev3_gcagk6.webp" class="d-block w-100" alt="Wide shot of a team presenting">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev4_xpwqiv.webp" class="d-block w-100" alt="Wide shot of a team presenting">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
                             </div>
                         </div>
                     </div>
@@ -291,8 +289,8 @@
     </main>
 
     <footer class="footer mt-auto py-3">
-        <div class="container d-flex justify-content-center mt-5">
-            <span>Made with ❤ by Sean McGinty</span>
+        <div class="container d-flex justify-content-center">
+            <span>Made with ❤ by Sean and ComSSA</span>
         </div>
     </footer>
 
