--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <!doctype html>
 <html lang="en" class="h-100">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Made with ❤ by Sean and ComSSA">
-    <meta name="description" content="ComSSA X CASSA Hackathon 2022">
+    <!-- Main -->
     <title>ComSSA X CASSA Hackathon 2022</title>
+    <meta charset="utf-8">
+    <meta name="author" content="Made with ❤ by Sean and ComSSA">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="title" content="ComSSA X CASSA Hackathon 2022">
+    <meta name="description" content="ComSSA X CASSA Hackathon 2022">
+    <meta name="google" content="notranslate"/>
+    <meta name="robots" content="index, nofollow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hackathon.comssa.org.au/">
+    <meta property="og:title" content="ComSSA X CASSA Hackathon 2022">
+    <meta property="og:description" content="ComSSA X CASSA Hackathon 2022">
+    <meta property="og:image" content="./assets/CH22_Branding_Elements_1.svg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://hackathon.comssa.org.au/">
+    <meta property="twitter:title" content="ComSSA X CASSA Hackathon 2022">
+    <meta property="twitter:description" content="ComSSA X CASSA Hackathon 2022">
+    <meta property="twitter:image" content="./assets/CH22_Branding_Elements_1.svg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,9 +44,11 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/js/bootstrap.min.js" integrity="sha512-5BqtYqlWfJemW5+v+TZUs22uigI8tXeVah5S/1Z6qBLVO7gakAOtkOzUtgq6dsIo5c0NJdmGPs0H9I+2OHUHVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css" integrity="sha512-CpIKUSyh9QX2+zSdfGP+eWLx23C8Dj9/XmHjZY2uDtfkdLGo0uY12jgcnkX9vXOgYajEKb/jiw67EYm+kBf+6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- Custom Fonts -->
     <link rel="preload" href="./assets/Pattanakarn-Regular-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+    <link rel="preload" href="./assets/Pattanakarn-Bold-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
-    <!-- Custom -->
+    <!-- Custom CSS and JS-->
     <link rel="stylesheet" href="./styles.css?v=5">
     <script defer src="./scripts.js?v=2"></script>
 
@@ -53,14 +76,14 @@
         <div class="container mb-5">
             <!-- Header -->
             <div class="d-none d-lg-flex align-items-center justify-content-around mt-top main-title w-100">
-                <img src="./assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022">
+                <img src="./assets/CH22_Branding_Elements_3.svg" alt="ComSSA X CASSA Hackathon 2022">
                 <h1 class="int-text mx-4">Interstellar Odyssey</h1>
                 <img src="./assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
             </div>
             
             <div class="d-flex d-lg-none flex-column align-items-center justify-content-center mt-top main-title w-100">
                 <div class="mb-3">
-                    <img src="./assets/CH22_Branding_Elements_1.svg" alt="ComSSA X CASSA Hackathon 2022" class="me-4">
+                    <img src="./assets/CH22_Branding_Elements_3.svg" alt="ComSSA X CASSA Hackathon 2022" class="me-4">
                     <img src="./assets/comssa.png" alt="ComSSA Logo">
                 </div>
                 <h1 class="int-text">Interstellar Odyssey</h1>
@@ -177,30 +200,6 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="5000">
-                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev1_ejod9a.webp" class="d-block w-100" alt="Medium shot of a team presenting">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev2_hal9jh.webp" class="d-block w-100" alt="Mid shot of a team">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev3_gcagk6.webp" class="d-block w-100" alt="Wide shot of a team presenting">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev4_xpwqiv.webp" class="d-block w-100" alt="Wide shot of a team presenting">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
                             <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182202/Hackathon/H7409018_S_nsnrvi.png" class="d-block w-100" alt="Wide shot of students listening">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
@@ -234,6 +233,30 @@
                             <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182201/Hackathon/IMG_4467_S_qkjesy.png" class="d-block w-100" alt="ComSSA team working">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="mb-3">ComSSA x CSing Hackathon - 2022</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev1_ejod9a.webp" class="d-block w-100" alt="Medium shot of a team presenting">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev2_hal9jh.webp" class="d-block w-100" alt="Mid shot of a team">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev3_gcagk6.webp" class="d-block w-100" alt="Wide shot of a team presenting">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="https://res.cloudinary.com/s3ansh33p/image/upload/ar_1.8,c_crop,fl_lossy,f_auto/v1666182294/Hackathon/prev4_xpwqiv.webp" class="d-block w-100" alt="Wide shot of a team presenting">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="mb-3">ComSSA x IET Hackathon - 2021</h5>
                             </div>
                         </div>
                     </div>
