--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <meta property="og:url" content="https://hackathon.comssa.org.au/">
     <meta property="og:title" content="ComSSA X CASSA Hackathon 2022">
     <meta property="og:description" content="ComSSA X CASSA Hackathon 2022">
-    <meta property="og:image" content="./assets/CH22_Branding_Elements_1.svg">
+    <meta property="og:image" content="https://hackathon.comssa.org.au/assets/CH22_Branding_Elements_1.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://hackathon.comssa.org.au/">
     <meta property="twitter:title" content="ComSSA X CASSA Hackathon 2022">
     <meta property="twitter:description" content="ComSSA X CASSA Hackathon 2022">
-    <meta property="twitter:image" content="./assets/CH22_Branding_Elements_1.svg">
+    <meta property="twitter:image" content="https://hackathon.comssa.org.au/assets/CH22_Branding_Elements_1.svg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@
     <link rel="preload" href="./assets/Pattanakarn-Bold-SemiExpanded.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
     <!-- Custom CSS and JS-->
-    <link rel="stylesheet" href="./styles.css?v=5">
+    <link rel="stylesheet" href="./styles.css?v=6">
     <script defer src="./scripts.js?v=2"></script>
 
     <!-- Favicons -->
@@ -313,7 +313,7 @@
 
     <footer class="footer mt-auto py-3">
         <div class="container d-flex justify-content-center">
-            <span>Made with ❤ by Sean and ComSSA</span>
+            <span>Made with ❤ by Sean McGinty</span>
         </div>
     </footer>
 
