decrease header vertical spacing

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </div>
 
 
-            <div class="row mt-5 flex-column-reverse flex-lg-row">
-                <div class="col-12 col-lg-6 my-5">
+            <div class="row flex-column-reverse flex-lg-row">
+                <div class="col-12 col-lg-6 mt-3 mb-5">
                     <img src="./assets/h22.svg" class="mb-4" alt="ComSSA Hackathon 2022">
                     <!-- Description -->
                     <p>The ComSSA Hackathon is an annual event hosted by the Computer Science Students Association (ComSSA), the largest computing club at Curtin University, to provide students and young professionals of all disciplines an opportunity to learn, collaborate and solve problems. This year, ComSSA is co-collaborating with the Computer And Security Student Association (CASSA), an association for students studying Computer Science and Cyber Security at Edith Cowan University.</p>
@@ -130,7 +130,7 @@
                 </div>
 
                 <!-- Countdown -->
-                <div class="col-12 col-lg-6 my-5" style="min-height: 300px;">
+                <div class="col-12 col-lg-6 mt-3 mb-5" style="min-height: 300px;">
                     <div class="d-flex align-items-center justify-content-center position-relative h-100 w-100" style="min-height: 300px;">
                         <div class="countdown-dots position-absolute"></div>
                         <div class="figure position-absolute">
