--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
                         </div>
                     </div>
 
+                    <div class="mt-3">
+                        Contact us on <a href="facebook.com/ComSSACurtin">Facebook @ComSSACurtin</a> if you have further questions!
+                    </div>
+
                     <!-- Get Involved! -->
-                    <div class="d-flex flex-md-row flex-column align-items-center mt-5 social-icons">
+                    <div class="d-flex flex-md-row flex-column align-items-center mt-3 social-icons">
                         <p class="me-2 mb-2">Get involved with ComSSA!</p>
                         <div class="d-flex align-items-center justify-content-center mb-2">
                             <a href="https://www.linkedin.com/company/computer-science-students-association" target="_blank" rel="noopener noreferrer">
