adjust page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="h-100">
   <head>
     <!-- Main -->
-    <title>ComSSA X CASSA Hackathon 2022</title>
+    <title>ComSSA Hackathon 2022</title>
     <meta charset="utf-8">
     <meta name="author" content="Made with ❤ by Sean and ComSSA">
     <meta name="viewport" content="width=device-width, initial-scale=1">
