--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="author" content="Made with ❤ by Sean and ComSSA">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="ComSSA X CASSA Hackathon 2022">
-    <meta name="description" content="ComSSA X CASSA Hackathon 2022">
+    <meta name="title" content="COMSSA Hackathon 2022">
+    <meta name="description" content="COMSSA Hackathon 2022">
     <meta name="google" content="notranslate"/>
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -18,15 +18,15 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hackathon.comssa.org.au/">
-    <meta property="og:title" content="ComSSA X CASSA Hackathon 2022">
-    <meta property="og:description" content="ComSSA X CASSA Hackathon 2022">
+    <meta property="og:title" content="COMSSA Hackathon 2022">
+    <meta property="og:description" content="COMSSA Hackathon 2022">
     <meta property="og:image" content="https://hackathon.comssa.org.au/assets/CH22_Branding_Elements_1.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://hackathon.comssa.org.au/">
-    <meta property="twitter:title" content="ComSSA X CASSA Hackathon 2022">
-    <meta property="twitter:description" content="ComSSA X CASSA Hackathon 2022">
+    <meta property="twitter:title" content="COMSSA Hackathon 2022">
+    <meta property="twitter:description" content="COMSSA Hackathon 2022">
     <meta property="twitter:image" content="https://hackathon.comssa.org.au/assets/CH22_Branding_Elements_1.svg">
 
     <!-- Google Fonts -->
@@ -59,8 +59,8 @@
     <link rel="manifest" href="./assets/fav/site.webmanifest">
     <link rel="mask-icon" href="./assets/fav/safari-pinned-tab.svg" color="#2f1244">
     <link rel="shortcut icon" href="./assets/fav/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="ComSSA X CASSA Hackathon 2022">
-    <meta name="application-name" content="ComSSA X CASSA Hackathon 2022">
+    <meta name="apple-mobile-web-app-title" content="COMSSA Hackathon 2022">
+    <meta name="application-name" content="COMSSA Hackathon 2022">
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="msapplication-config" content="./assets/fav/browserconfig.xml">
     <meta name="theme-color" content="#2f1244">
@@ -76,14 +76,14 @@
         <div class="container mb-5">
             <!-- Header -->
             <div class="d-none d-lg-flex align-items-center justify-content-around mt-top main-title w-100">
-                <img src="./assets/CH22_Branding_Elements_3.svg" alt="ComSSA X CASSA Hackathon 2022">
+                <img src="./assets/CH22_Branding_Elements_3.svg" alt="COMSSA Hackathon 2022">
                 <h1 class="int-text mx-4">Interstellar Odyssey</h1>
-                <img src="./assets/comssa.png" alt="ComSSA X CASSA Hackathon 2022">
+                <img src="./assets/comssa.png" alt="COMSSA Hackathon 2022">
             </div>
             
             <div class="d-flex d-lg-none flex-column align-items-center justify-content-center mt-top main-title w-100">
                 <div class="mb-3">
-                    <img src="./assets/CH22_Branding_Elements_3.svg" alt="ComSSA X CASSA Hackathon 2022" class="me-4">
+                    <img src="./assets/CH22_Branding_Elements_3.svg" alt="COMSSA Hackathon 2022" class="me-4">
                     <img src="./assets/comssa.png" alt="ComSSA Logo">
                 </div>
                 <h1 class="int-text">Interstellar Odyssey</h1>
