fix facebook link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
 
                     <div class="mt-3">
-                        Contact us on <a href="facebook.com/ComSSACurtin">Facebook @ComSSACurtin</a> if you have further questions!
+                        Contact us on <a href="https://www.facebook.com/ComSSACurtin">Facebook @ComSSACurtin</a> if you have further questions!
                     </div>
 
                     <!-- Get Involved! -->
