--- a/index.html
+++ b/index.html
@@ -275,6 +275,63 @@
                 </div>
             </div>
 
+            <!-- FAQ -->
+            <div class="mt-5">
+                <h2 class="section-title">Frequently Asked Questions</h2>
+                <div class="accordion accordion-flush" id="accFAQ">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="accOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accInnerOne" aria-expanded="false" aria-controls="accInnerOne">
+                                What is Hackathon?
+                            </button>
+                        </h2>
+                        <div id="accInnerOne" class="accordion-collapse collapse" aria-labelledby="accOne" data-bs-parent="#accFAQ">
+                            <div class="accordion-body">There is a large problem presented, with teams working together to brainstorm, design and pitch your best solution. It may be something practical and open-ended.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="accTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accInnerTwo" aria-expanded="false" aria-controls="accInnerTwo">
+                                But why should I join?
+                            </button>
+                        </h2>
+                        <div id="accInnerTwo" class="accordion-collapse collapse" aria-labelledby="accTwo" data-bs-parent="#accFAQ">
+                            <div class="accordion-body">It is a chance to work on a creative solution with your team mates and of industry professionals. There is also a prize pool of over $4500.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="accThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accInnerThree" aria-expanded="false" aria-controls="accInnerThree">
+                                What skill level do I have to be at in order to join?
+                            </button>
+                        </h2>
+                        <div id="accInnerThree" class="accordion-collapse collapse" aria-labelledby="accThree" data-bs-parent="#accFAQ">
+                            <div class="accordion-body">You do not need computing/coding knowledge to join. The only criteria you need to join is to be currently a secondary/tertiary student or a young professional.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="accFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accInnerFour" aria-expanded="false" aria-controls="accInnerFour">
+                                Do I need to be in a team?
+                            </button>
+                        </h2>
+                        <div id="accInnerFour" class="accordion-collapse collapse" aria-labelledby="accFour" data-bs-parent="#accFAQ">
+                            <div class="accordion-body">No. However, we strongly recommend working in teams of up to 6. You may choose to be assigned to a team if you are joining as an individual.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="accFive">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accInnerFive" aria-expanded="false" aria-controls="accInnerFive">
+                                Will there be food provided?
+                            </button>
+                        </h2>
+                        <div id="accInnerFive" class="accordion-collapse collapse" aria-labelledby="accFive" data-bs-parent="#accFAQ">
+                            <div class="accordion-body">Yes. There will be food, drinks and snacks provided on all three days of the Hackathon.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Sponsors -->
             <div class="section-title">
                 <!-- Collection of images -->
