--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="accOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accInnerOne" aria-expanded="false" aria-controls="accInnerOne">
-                                What is Hackathon?
+                                What is a Hackathon?
                             </button>
                         </h2>
                         <div id="accInnerOne" class="accordion-collapse collapse" aria-labelledby="accOne" data-bs-parent="#accFAQ">
