new sponsor assets + auDA

--- a/index.html
+++ b/index.html
@@ -348,22 +348,25 @@
                 <h4 class="w-100 text-center mt-5 mb-4">Sponsors</h4>
                 <div class="row sponsors justify-content-center">
                     
-                    <div class="col-6 col-md-4 col-lg-3 d-flex align-items-center justify-content-center mb-3">
-                        <img src="./assets/powerledger.webp" class="img-fluid" alt="Powerledger Logo">
+                    <div class="col-6 col-lg-3 d-flex align-items-center justify-content-center mb-3">
+                        <img src="./assets/powerledger.svg" class="img-fluid" alt="Powerledger Logo">
                     </div>
-                    <div class="col-6 col-md-4 col-lg-3 d-flex align-items-center justify-content-center mb-3">
+                    <div class="col-6 col-lg-3 d-flex align-items-center justify-content-center mb-3">
                         <img src="./assets/vgw.webp" class="img-fluid" alt="VGW Logo">
                     </div>
                 </div>
                 <div class="row mb-5 sponsors justify-content-center">
-                    <div class="col-6 col-md-4 col-lg-3 d-flex align-items-center justify-content-center mb-3">
+                    <div class="col-6 col-lg-3 d-flex align-items-center justify-content-center mb-3">
                         <img src="./assets/atlassian.png" class="img-fluid" alt="Atlassian Logo">
                     </div>
-                    <div class="col-6 col-md-4 col-lg-3 d-flex align-items-center justify-content-center mb-3">
+                    <div class="col-6 col-lg-3 d-flex align-items-center justify-content-center mb-3">
                         <img src="./assets/imc.png" class="img-fluid" alt="IMC Logo">
                     </div>
-                    <div class="col-6 col-md-4 col-lg-3 d-flex align-items-center justify-content-center mb-3">
+                    <div class="col-6 col-lg-3 d-flex align-items-center justify-content-center mb-3">
                         <img src="./assets/bankwest.png" class="img-fluid" alt="Bankwest Logo">
+                    </div>
+                    <div class="col-6 col-lg-3 d-flex align-items-center justify-content-center mb-3">
+                        <img src="./assets/auda.svg" style="max-width: 45%" class="img-fluid" alt="auDA Logo">
                     </div>
                 </div>
             </div>
